use mod id constant and fix/clean up more things